--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,4 @@
-(executable
-  (name main)
-	(libraries js_of_ocaml)
+(library
+  (name viz_backend)
+	(libraries js_of_ocaml base)
 	(preprocess (pps js_of_ocaml-ppx)))
